# tioo

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STYLES.md  uncrustify.cfg
boot/: main.c
boot/armv7/: startup.S  startup.c  vectors.c
boot/rv32i/: startup.S  vectors.c
cmake/armv7/: toolchain.cmake
cmake/rv32i/: toolchain.cmake
docs/: README.md
docs/syscalls/: README.md
docs/syscalls/Cablegram/: README.md
docs/syscalls/Memory/: README.md
docs/syscalls/Mutex/: README.md
docs/syscalls/Program/: README.md
docs/syscalls/Semaphore/: README.md
docs/syscalls/Synchronizer/: README.md
docs/syscalls/Task/: README.md
docs/versions/: README.md
errors/: cablegrams.h  errors.h  mem.h  programs.h  synchronizers.h  tasks.h
ipc/: cablegrams.c  ipc.h  locks.c  mutexes.c  semaphores.c  synchronizers.c
mem/: mem.c  mem.h
mem/armv7/: mem_routines.h
mem/rv32i/: mem_routines.h
owners/: owners.c  owners.h
peripherals/ints/: ints.h
peripherals/ints/armv7/: controller.S
peripherals/ints/rv32i/: controller.S
peripherals/systimer/: systimer.c  systimer.h
peripherals/systimer/armv7/: systimer.S
programs/: programs.c  programs.h
syscalls/: api.c  syscalls.c  syscalls.h
syscalls/armv7/: syscall_handler.S  syscall_handler.s  syscall_mechanics.h  syscall_routines.h
syscalls/rv32i/: syscall_handler.S  syscall_routines.h
tasks/: tasks.c  tasks.h  tasks_manager.c
tasks/armv7/: context.S  manager.S
tasks/rv32i/: manager.S  task_data.h
timers/: systimer.h
